// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PeriodsForm component > renders as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c3.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c3.btn .Button__value {
  width: auto;
}

.c3.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c3.btn:focus {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #2E5DD7;
  outline-offset: 2px;
  box-shadow: none;
}

.c3.btn.btn-primary {
  color: #FFFFFF;
  background-color: #013366;
}

.c3.btn.btn-primary:hover,
.c3.btn.btn-primary:active,
.c3.btn.btn-primary:focus {
  background-color: #1E5189;
}

.c3.btn.btn-secondary {
  color: #013366;
  background: none;
  border-color: #013366;
}

.c3.btn.btn-secondary:hover,
.c3.btn.btn-secondary:active,
.c3.btn.btn-secondary:focus {
  color: #FFFFFF;
  background-color: #013366;
}

.c3.btn.btn-info {
  color: #9F9D9C;
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c3.btn.btn-info:hover,
.c3.btn.btn-info:active,
.c3.btn.btn-info:focus {
  color: var(--surface-color-primary-button-hover);
  background: none;
}

.c3.btn.btn-light {
  color: #FFFFFF;
  background-color: #606060;
  border: none;
}

.c3.btn.btn-light:hover,
.c3.btn.btn-light:active,
.c3.btn.btn-light:focus {
  color: #FFFFFF;
  background-color: #606060;
}

.c3.btn.btn-dark {
  color: #FFFFFF;
  background-color: #474543;
  border: none;
}

.c3.btn.btn-dark:hover,
.c3.btn.btn-dark:active,
.c3.btn.btn-dark:focus {
  color: #FFFFFF;
  background-color: #474543;
}

.c3.btn.btn-danger {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c3.btn.btn-danger:hover,
.c3.btn.btn-danger:active,
.c3.btn.btn-danger:focus {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c3.btn.btn-warning {
  color: #FFFFFF;
  background-color: #FCBA19;
  border-color: #FCBA19;
}

.c3.btn.btn-warning:hover,
.c3.btn.btn-warning:active,
.c3.btn.btn-warning:focus {
  color: #FFFFFF;
  border-color: #FCBA19;
  background-color: #FCBA19;
}

.c3.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  color: var(--surface-color-primary-button-default);
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3.btn.btn-link:hover,
.c3.btn.btn-link:active,
.c3.btn.btn-link:focus {
  color: var(--surface-color-primary-button-hover);
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c3.btn.btn-link:disabled,
.c3.btn.btn-link.disabled {
  color: #9F9D9C;
  background: none;
  pointer-events: none;
}

.c3.btn:disabled,
.c3.btn:disabled:hover {
  color: #9F9D9C;
  background-color: #EDEBE9;
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
}

.c3.Button .Button__icon {
  margin-right: 1.6rem;
}

.c3.Button--icon-only:focus {
  outline: none;
}

.c3.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c2 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2.4rem;
}

.c0 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c4.btn.btn-primary,
.c4.btn.btn-primary:active {
  background-color: #42814A;
}

.c4.btn.btn-primary:hover,
.c4.btn.btn-primary:focus {
  background-color: #2e8540;
  outline-color: #2e8540;
}

.c5.c5 {
  display: inline-block;
  margin-left: 1.5rem;
  margin-bottom: 0.5rem;
  float: right;
}

.c1 {
  min-width: 130rem;
}

<div
    class="c0 form-section c1"
  >
    <h2
      class="c2"
    >
      <div
        class="no-gutters row"
      >
        <div
          class="align-content-end col"
        >
          <div
            class="no-gutters justify-content-between align-items-end row"
          >
            <div
              class="my-1 col-auto"
            >
              Payment Periods
            </div>
            <div
              class="col-auto"
            >
              <button
                class="c3 Button c4 c5 btn btn-primary"
                type="button"
              >
                <div
                  class="Button__value"
                >
                  <svg
                    fill="currentColor"
                    height="2rem"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="2rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                    />
                  </svg>
                   Add a Period
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </h2>
    <div
      class="collapse show"
    >
      <div
        class="table no-zebra-rows"
        data-testid="leasePaymentsTable"
        role="table"
      >
        <div
          class="thead thead-light"
        >
          <div
            class="tr"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 395px;"
          >
            <div
              class="th"
              style="width: 4.7rem;"
            />
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              />
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 100 0 auto; min-width: 55px; width: 100px; justify-content: center; text-align: center; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Start date - end date
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Payment frequency
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Payment due
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected payment ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedPaymentTooltip"
                  id="expectedPaymentTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                GST?
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 35 0 auto; min-width: 30px; width: 35px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                GST ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-gstAmountTooltip"
                  id="gstAmountTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 45 0 auto; min-width: 30px; width: 45px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected total ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedTotalTooltip"
                  id="expectedTotalTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected period ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedPeriodTooltip"
                  id="expectedPeriodTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Actual total ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-actualTotalTooltip"
                  id="actualTotalTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Exercised?
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-exercisedTooltip"
                  id="exercisedTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 40px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Actions
              </div>
            </div>
          </div>
        </div>
        <div
          class="no-rows-message"
        >
          There is no corresponding data
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PeriodsForm component > renders with data as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c3.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c3.btn .Button__value {
  width: auto;
}

.c3.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c3.btn:focus {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #2E5DD7;
  outline-offset: 2px;
  box-shadow: none;
}

.c3.btn.btn-primary {
  color: #FFFFFF;
  background-color: #013366;
}

.c3.btn.btn-primary:hover,
.c3.btn.btn-primary:active,
.c3.btn.btn-primary:focus {
  background-color: #1E5189;
}

.c3.btn.btn-secondary {
  color: #013366;
  background: none;
  border-color: #013366;
}

.c3.btn.btn-secondary:hover,
.c3.btn.btn-secondary:active,
.c3.btn.btn-secondary:focus {
  color: #FFFFFF;
  background-color: #013366;
}

.c3.btn.btn-info {
  color: #9F9D9C;
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c3.btn.btn-info:hover,
.c3.btn.btn-info:active,
.c3.btn.btn-info:focus {
  color: var(--surface-color-primary-button-hover);
  background: none;
}

.c3.btn.btn-light {
  color: #FFFFFF;
  background-color: #606060;
  border: none;
}

.c3.btn.btn-light:hover,
.c3.btn.btn-light:active,
.c3.btn.btn-light:focus {
  color: #FFFFFF;
  background-color: #606060;
}

.c3.btn.btn-dark {
  color: #FFFFFF;
  background-color: #474543;
  border: none;
}

.c3.btn.btn-dark:hover,
.c3.btn.btn-dark:active,
.c3.btn.btn-dark:focus {
  color: #FFFFFF;
  background-color: #474543;
}

.c3.btn.btn-danger {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c3.btn.btn-danger:hover,
.c3.btn.btn-danger:active,
.c3.btn.btn-danger:focus {
  color: #FFFFFF;
  background-color: #CE3E39;
}

.c3.btn.btn-warning {
  color: #FFFFFF;
  background-color: #FCBA19;
  border-color: #FCBA19;
}

.c3.btn.btn-warning:hover,
.c3.btn.btn-warning:active,
.c3.btn.btn-warning:focus {
  color: #FFFFFF;
  border-color: #FCBA19;
  background-color: #FCBA19;
}

.c3.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  color: var(--surface-color-primary-button-default);
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3.btn.btn-link:hover,
.c3.btn.btn-link:active,
.c3.btn.btn-link:focus {
  color: var(--surface-color-primary-button-hover);
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c3.btn.btn-link:disabled,
.c3.btn.btn-link.disabled {
  color: #9F9D9C;
  background: none;
  pointer-events: none;
}

.c3.btn:disabled,
.c3.btn:disabled:hover {
  color: #9F9D9C;
  background-color: #EDEBE9;
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
}

.c3.Button .Button__icon {
  margin-right: 1.6rem;
}

.c3.Button--icon-only:focus {
  outline: none;
}

.c3.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c8.c8.btn {
  background-color: unset;
  border: none;
}

.c8.c8.btn:hover,
.c8.c8.btn:focus,
.c8.c8.btn:active {
  background-color: unset;
  outline: none;
  box-shadow: none;
}

.c8.c8.btn svg {
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
}

.c8.c8.btn svg:hover {
  -webkit-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}

.c8.c8.btn.btn-primary svg {
  color: #013366;
}

.c8.c8.btn.btn-primary svg:hover {
  color: #013366;
}

.c8.c8.btn.btn-light svg {
  color: var(--surface-color-primary-button-default);
}

.c8.c8.btn.btn-light svg:hover {
  color: #CE3E39;
}

.c8.c8.btn.btn-info svg {
  color: var(--surface-color-primary-button-default);
}

.c8.c8.btn.btn-info svg:hover {
  color: var(--surface-color-primary-button-hover);
}

.c9.c9.btn.btn-primary {
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: unset;
}

.c9.c9.btn.btn-primary svg {
  color: #aaaaaa !important;
}

.c9.c9.btn.btn-primary .text {
  display: none;
}

.c9.c9.btn.btn-primary svg:hover,
.c9.c9.btn.btn-primary svg:active,
.c9.c9.btn.btn-primary svg:focus {
  color: #d8292f !important;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: unset;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9.c9.btn.btn-primary svg:hover .text,
.c9.c9.btn.btn-primary svg:active .text,
.c9.c9.btn.btn-primary svg:focus .text {
  display: inline;
  line-height: 2rem;
}

.c2 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2.4rem;
}

.c0 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c4.btn.btn-primary,
.c4.btn.btn-primary:active {
  background-color: #42814A;
}

.c4.btn.btn-primary:hover,
.c4.btn.btn-primary:focus {
  background-color: #2e8540;
  outline-color: #2e8540;
}

.c5.c5 {
  display: inline-block;
  margin-left: 1.5rem;
  margin-bottom: 0.5rem;
  float: right;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 [id^='edit-period'] {
  color: #428bca;
}

.c7 [id^='delete-period'] {
  color: #428bca;
}

.c7 [id^='delete-period']:hover {
  color: #CE3E39;
}

.c7 .btn.btn-primary {
  background-color: transparent;
  padding: 0;
}

.c1 {
  min-width: 130rem;
}

<div
    class="c0 form-section c1"
  >
    <h2
      class="c2"
    >
      <div
        class="no-gutters row"
      >
        <div
          class="align-content-end col"
        >
          <div
            class="no-gutters justify-content-between align-items-end row"
          >
            <div
              class="my-1 col-auto"
            >
              Payment Periods
            </div>
            <div
              class="col-auto"
            >
              <button
                class="c3 Button c4 c5 btn btn-primary"
                type="button"
              >
                <div
                  class="Button__value"
                >
                  <svg
                    fill="currentColor"
                    height="2rem"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="2rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                    />
                  </svg>
                   Add a Period
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </h2>
    <div
      class="collapse show"
    >
      <div
        class="table no-zebra-rows"
        data-testid="leasePaymentsTable"
        role="table"
      >
        <div
          class="thead thead-light"
        >
          <div
            class="tr"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 395px;"
          >
            <div
              class="th"
              style="width: 4.7rem;"
            />
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              />
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 100 0 auto; min-width: 55px; width: 100px; justify-content: center; text-align: center; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Start date - end date
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Payment frequency
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Payment due
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected payment ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedPaymentTooltip"
                  id="expectedPaymentTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                GST?
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 35 0 auto; min-width: 30px; width: 35px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                GST ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-gstAmountTooltip"
                  id="gstAmountTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 45 0 auto; min-width: 30px; width: 45px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected total ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedTotalTooltip"
                  id="expectedTotalTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected period ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedPeriodTooltip"
                  id="expectedPeriodTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Actual total ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-actualTotalTooltip"
                  id="actualTotalTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Exercised?
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-exercisedTooltip"
                  id="exercisedTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 40px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Actions
              </div>
            </div>
          </div>
        </div>
        <div
          class="tbody"
          role="rowgroup"
        >
          <div
            class="tr-wrapper"
          >
            <div
              class="tr"
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 395px;"
            >
              <div
                class="td expander svg-btn"
                data-testid="table-row-expander-"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m10 17 5-5-5-5v10z"
                  />
                  <path
                    d="M0 24V0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                <div
                  class="c6 align-items-center"
                >
                  <b>
                    Period 1
                  </b>
                   
                </div>
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 100 0 auto; min-width: 55px; width: 100px; justify-content: center; text-align: center; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                 - 
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              />
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              />
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                $0.00
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                N
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 35 0 auto; min-width: 30px; width: 35px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              />
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 45 0 auto; min-width: 30px; width: 45px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                $0.00
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                $0.00
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              />
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                N
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 40 0 auto; min-width: 40px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                <div
                  class="c6 c7"
                >
                  <button
                    class="c3 Button c8 btn btn-primary"
                    data-testid="edit-button"
                    title="edit period"
                    type="button"
                  >
                    <div
                      class="Button__value"
                    >
                      <svg
                        fill="currentColor"
                        height="22"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 576 512"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
                        />
                      </svg>
                    </div>
                  </button>
                  <button
                    class="c3 Button c8 c9 btn btn-primary"
                    data-testid="remove-button"
                    title="delete period"
                    type="button"
                  >
                    <div
                      class="Button__value"
                    >
                      <svg
                        fill="currentColor"
                        height="22"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
